# LLMToys

./: .editorconfig  .gitignore  AGENTS.md  README.md  pyproject.toml  run_model.py  run_nl2sql.py
etl/: get_db_data.py  inspect_db.py
llm_core/: __init__.py  env.py  model_registry.py  prompt_optimizer.py  tokenizer_utils.py  vllm_config_gemma4.py  vllm_config_gemma4_e4b.py  vllm_config_ministral3.py  vllm_config_ministral3I.py  vllm_config_ministral3R.py  vllm_config_phi4_reasoning.py  vllm_config_qwen36.py  vllm_engine.py  vllm_interface.py  vllm_runtime_utils.py
nl2sql/: README.md  __init__.py
nl2sql/config/: __init__.py  env.py  loader.py  models.py  settings.yaml
nl2sql/orchestrator/: __init__.py  config.py  contracts.py  llm_manager.py  pipeline.py  reporting.py
nl2sql/orchestrator/db/: __init__.py  engine_factory.py  result_normalizer.py  sql_optimizer.py
nl2sql/orchestrator/stages/: __init__.py  execution_stage.py  narrative_stage.py  prune_stage.py  resolver_stage.py  solver_stage.py
nl2sql/semantic_prune/: __init__.py  config.py  e2rank_engine.py  embedding_stage.py  query_enrichment.py  query_signals.py  reporting.py  rerank_stage.py  schema_logic.py  schema_pruning.py  schema_tables.py  scoring.py  text_formatting.py
nl2sql/semantic_resolver/: __init__.py  assets.py  compatibility.py  config.py  embedding_stage.py  plan_compiler.py  plan_compiler_joins.py  plan_intent.py  plan_model.py  plan_repair.py  reporting.py  rerank_stage.py  resolver.py  rules_loader.py  synonym_logic.py  text_formatting.py  verification.py
nl2sql/sql_solver_generator/: __init__.py  business_rules.py  config.py  contracts.py  llm_router.py  payload_compaction.py  plan_loader.py  prompt_contract.py  query_shape.py  reporting.py  rules_loader.py  runtime.py  schema_loader.py  solver.py  spec_model.py  sql_generator.py  sql_normalizer.py  time_resolver.py
nl2sql/utils/: __init__.py  collections.py  decision_models.py  dialect_registry.py  embedding_cache.py  normalization.py  prompt_budget.py  schema_normalization.py  schema_roles.py  semantic_contract.py  semantic_examples.py  semantic_filters.py  spanish_morphology.py  sql_identifiers.py  text_utils.py  vector_math.py  vllm_runtime.py  yaml_utils.py
quantizer/: README.md  __init__.py  awq_recipe.py  calibration_data.py  config.py  gptq_recipe.py  memory_preflight.py  output_readme.py  quantizer.py  run.py  vllm_smoke_test.py
quantizer/assets/: awq_mappings.yaml  dataset_templates.yaml
tests/: conftest.py  generic_domain.py  support_coverage_matrix.py  test_llm_core_engine.py  test_llm_core_env.py  test_llm_model_registry.py  test_llm_model_runners.py  test_nl2sql_coverage_matrix.py  test_nl2sql_execution_stage.py  test_nl2sql_orchestrator_e2e.py  test_nl2sql_prompt_budget_e2e.py  test_prompt_config_loading.py  test_prompt_optimizer.py  test_prune_runner_schema_loading.py  test_quantizer.py  test_resolver_dialect_registry.py  test_resolver_time_filter_dialect.py  test_semantic_examples_selection.py  test_semantic_plan_compiler.py  test_semantic_prune_fk_path.py  test_semantic_prune_query_enrichment.py  test_semantic_prune_query_signal_overrides.py  test_semantic_resolver_embedding_cache.py  test_semantic_resolver_example_expansion.py  test_semantic_resolver_runner_persistence.py  test_semantic_resolver_runtime_cleanup.py  test_semantic_resolver_synonym_logic.py  test_semantic_resolver_verifier.py  test_semantic_runtime_eager_mode.py  test_shared_runtime_and_yaml_utils.py  test_solver_runner_model_selection.py  test_sql_solver_business_rules_yaml.py  test_sql_solver_contracts.py  test_sql_solver_dialects.py  test_sql_solver_e2e_avg_a_per_c.py  test_sql_solver_filter_value_rules.py  test_sql_solver_llm_router.py  test_sql_solver_plan_normalization_stage.py  test_sql_solver_prompt_payloads.py  test_sql_solver_prompt_preflight.py  (+5 more)
tests/fixtures/: generic_domain.yaml
utils/: check-env.py  ollamatest.py
(+15 files in other folders)
